font size and family changes

--- a/css/home.css
+++ b/css/home.css
@@ -681,7 +681,8 @@ body {
   }
 
   .text-column h2 {
-    font-size: 30px;
+    font-size: 20px;
+    font-family: "futura-pt", sans-serif;
   }
 
   .text-column p {
@@ -721,12 +722,14 @@ body {
   }
 
   .page-title {
-    font-size: 28px;
+    font-size: 20px;
+    font-family: "futura-pt", sans-serif;
   }
 
   .face-nav {
     gap: 20px;
     margin-bottom: 120px;
+    font-family: "futura-pt", sans-serif;
   }
 
   .route-nav {
