--- a/css/home.css
+++ b/css/home.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  font-family: "futura-pt", sans-serif;
+  font-family: 'Futura';
   color: #111;
 
 }
@@ -47,7 +47,7 @@ body {
 }
 
 .nav-links {
-  font-family: "futura-pt", sans-serif;
+  font-family: 'Futura';
   list-style: none;
   display: flex;
   gap: 80px;
@@ -210,7 +210,7 @@ body {
 
 /* Text column (Column 2) */
 .text-column {
-  font-family: "futura-pt", sans-serif;
+  font-family: 'Futura';
   letter-spacing: 0.03em;
   flex: 0.6;
   display: flex;
@@ -334,7 +334,7 @@ body {
 .nav-title {
   font-size: 32px;
   font-weight: 600;
-  font-family: "futura-pt", sans-serif;
+  font-family: 'Futura';
   letter-spacing: 0.03em;
   margin-bottom: 6px; 
 }
@@ -343,7 +343,7 @@ body {
 .nav-subtitle {
   font-size: 18px;
   font-weight: 400;
-  font-family: "futura-pt", sans-serif;
+  font-family: 'Futura';
   opacity: 0.8; 
 }
 
@@ -444,7 +444,7 @@ body {
   color: #111;          /* force black */
   background: none;
   border: none;
-  font-family: "futura-pt", sans-serif;
+  font-family: 'Futura';
   font-size: 18px;
   cursor: pointer;
   text-decoration: underline;
