--- a/css/home.css
+++ b/css/home.css
@@ -16,7 +16,9 @@ html {
 
 @font-face {
   font-family: 'Futura';
-  src: url(../fonts/FuturaCyrillicBook.ttf);
+  src: url(../fonts/FuturaCyrillicBook.ttf) format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
