--- a/css/home.css
+++ b/css/home.css
@@ -409,7 +409,7 @@ body {
 
 .routes-layout {
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 1080px;
 }
 
@@ -447,7 +447,6 @@ body {
 }
 
 .face-link.active {
-  font-weight: bold;
   color: #111;
 }
 
