--- a/css/home.css
+++ b/css/home.css
@@ -611,7 +611,7 @@ body {
 
   .video-column {
     width: 100%;
-    height: 250px;         
+    height: auto;        
     margin: 0;             
   }
 
