--- a/css/home.css
+++ b/css/home.css
@@ -605,16 +605,21 @@ body {
     color: #aaaaaa;
   }
 
-  .video-column {
-    width: 100%;
-    height: auto;
-    margin-bottom: 0;
-  }
+.video-column {
+  width: 100%;
+  position: relative;
+  padding-top: 56.25%; /* 16:9 ratio */
+  margin-bottom: 0;
+}
 
-  .video-column video {
-    width: 100%;
-    height: auto;
-  }
+.video-column video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 }
 
 /*---------------------------------------------------------------------*/
